--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -1,11 +1,12 @@
-name: Manual Dispatch Example
+name: Print GitHub Context
 
 on:
   workflow_dispatch:
 
 jobs:
-  say-hello:
+  print-context:
     runs-on: ubuntu-latest
     steps:
-      - name: Say Hello
-        run: echo "👋 Hello! This workflow was manually triggered."
+      - name: Dump GitHub context
+        run: |
+          echo '${{ toJson(github) }}' | jq .
