--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print "github"
-        run: echo "${{ github }}"
+        run: echo "${{ toJSON(github) }}"
