--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -8,4 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print "github"
-        run: echo "${{ toJSON(github) }}"
+        run: |
+          echo "${{ toJSON(github) }}"
+          echo "${{ github.action	}}"
