--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -9,4 +9,4 @@ jobs:
     steps:
       - name: Print "github"
         run: |
-          echo "${{ github.action_path 	}}"
+          echo "$(pwd)"
