--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -9,9 +9,13 @@ jobs:
   print-hi:
     runs-on: ubuntu-latest
     steps:
-      - name: Print "github"
-        run: |
-          echo "${{github.ref}}" >>$GITHUB_OUTPUT
-          echo "AJAY" >>$GITHUB_OUTPUT
-      - name: Print GITHUB_OUTPUT
-        run: cat GITHUB_OUTPUT 
+      - name: Print "Hi"
+        run: | 
+          sleep 20
+          echo "Hi" 
+  print-hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print "Hello"
+        run: | 
+          echo "Hello"
