--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -1,12 +1,10 @@
 name: My First Work Flow
-
 on: 
   push:
-
 jobs:
   print-hi:
     runs-on: ubuntu-latest
     steps:
       - name: Print "github"
         run: |
-          echo "$(pwd)"
+          echo "${{ github.action_repository	 }}
