--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - name: Print "github"
         run: |
-          echo "${{ github.base_ref	}}"
+          echo "${{ github.env }}"
