--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -8,6 +8,8 @@ jobs:
       - name: echo 
         run: echo "name=Ajay" >> $GITHUB_OUTPUT
       - name: echo 
-        run: echo "age=35" ?? $GITHUB_env
+        run: echo "age=35" >> $GITHUB_env
       - name: latest
         run: ls
+      - name: echo 
+        run: echo $age
