--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -10,12 +10,11 @@ jobs:
         run: echo "name=Ajay" >> $GITHUB_OUTPUT
       - name: echo 
         run: echo "age=35" >> $GITHUB_ENV
-      - name: latest
-        run: ls
-      - name: echo 
-        run: echo $age
-      - name: echo 
-        run: echo ${{ steps.check.outputs.name}}
+      - name: echo
+        env:
+          gender="M"
+        run:echo $gender
+
 
   print-hello:
     runs-on: ubuntu-latest
